# sentiment-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
sentiment_analysis/AWS_processing/lambda_function/: lambda_function.py
sentiment_analysis/api/: app.py
sentiment_analysis/dashboard/: app.py
sentiment_analysis/data_transformation/: data_transformation.py  transformers.py
sentiment_analysis/model/: inference.py
sentiment_analysis/scrapping/: data_scrapping.py
sentiment_analysis/training/: comparison.py  evaluate.py  scrape_training_data.py  train.py
tests/: test_inference.py
